--- a/Recreating_masters_proposal.ipynb
+++ b/Recreating_masters_proposal.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Recreating_masters_proposal.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP3GXlgi62HXhNu2qF3NW03",
+      "authorship_tag": "ABX9TyOUP8k2KnaAN/5xBxrnhF41",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,49 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/aayushbhurtel/2143-OOP-Aayush/blob/main/Recreating_masters_proposal.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Recreating Masters Proposal\n",
+        "\n",
+        "## Data Visualization\n",
+        "\n",
+        "## Aayush Bhurtel"
+      ],
+      "metadata": {
+        "id": "PmlhTxziLoeT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Currently, I don't have a link for this visualization as it is just a picture of a visualization I am trying to recreate.\n",
+        "\n",
+        "I am going to try and recreate the visualization that describes the top 10 highested paid athelete of All-Time. Visualization is presented below."
+      ],
+      "metadata": {
+        "id": "9JRQH4QgL4EH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "![recreatingMasters](https://www.sportico.com/wp-content/uploads/2021/12/Screenshot-2021-11-03-193044.png)"
+      ],
+      "metadata": {
+        "id": "Fj8lCrZfMAjD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "I don't have an exact dataset right now but I'm still looking at kaggle and other sources.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "tvGRz1TBMoSv"
+      }
     },
     {
       "cell_type": "code",
