--- a/Recreating_masters_proposal.ipynb
+++ b/Recreating_masters_proposal.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Recreating_masters_proposal.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOUP8k2KnaAN/5xBxrnhF41",
+      "authorship_tag": "ABX9TyOa1M7RYBwYYaq4eF+h+j0t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,10 @@
       "cell_type": "markdown",
       "source": [
         "I don't have an exact dataset right now but I'm still looking at kaggle and other sources.\n",
-        "\n"
+        "\n",
+        "This visualization uses pictures in the graph plots which makes it interesting to see who is the athelete and what sports they play. \n",
+        "\n",
+        "Hardship in this visualization is to include picture of athelete themseleves and their sports in the bar chart."
       ],
       "metadata": {
         "id": "tvGRz1TBMoSv"
